feat: add useAuth hook

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 
 @theme {
   --animate-fade-from-top: fade-from-top 0.5s ease-out;
+  --animate-header-from-top: header-from-top 0.2s ease-out;
 
   @keyframes fade-from-top {
     0% {
@@ -14,6 +15,14 @@
     100% {
       transform: translateY(0);
       opacity: 1;
+    }
+  }
+  @keyframes header-from-top {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0%);
     }
   }
 }
